Improve training pipeline with better synthetic data generation

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@ finetune/pairs.pkl
 data/test_docs.jsonl
 data/train_docs.jsonl
 results/
+finetune/realistic_training_pairs.json
+
 # Python cache
 __pycache__/
 *.pyc
