--- a/config.yaml
+++ b/config.yaml
@@ -6,11 +6,12 @@ dataset:
   name: "leminda-ai/s2orc_small"
   processed_path: "data/processed_docs.jsonl"
 
-# Scoring weights for hybrid retrieval
-scoring:
-  dense_weight: 0.6    # 60% semantic similarity
-  sparse_weight: 0.3   # 30% keyword matching  
-  boost_weight: 0.1    # 10% metadata boosting
+# Neural fusion model settings (replaces fixed scoring weights)
+neural_fusion:
+  hidden_dim: 64       # Hidden layer size
+  learning_rate: 0.001 # Training learning rate
+  epochs: 100          # Training epochs
+  batch_size: 64       # Training batch size
 
 # Retrieval parameters
 retrieval:
